GNOME Bugzilla – Bug 690117
shell: fix refcounting in GMenu code
Last modified: 2012-12-13 14:46:38 UTC
gmenu_tree_entry_get_app_info() does not return a new reference, while gmenu_tree_get_root_directory() does.
Created attachment 231407 [details] [review] shell: fix refcounting in GMenu code
Review of attachment 231407 [details] [review]: Please split thise in 2 separate patches. Looks good otherwise. (I probably wouldn't have got this so wrong if there were API docs for gnome-menus).
Commited, thanks for the review.