shell: fix refcounting in GMenu code (1/2)

gmenu_tree_entry_get_app_info() does not return a new reference

https://bugzilla.gnome.org/show_bug.cgi?id=690117